# ethereum-indexer

./: Cargo.toml  Dockerfile  LICENSE  README.md
deployments/: docker-compose.yaml
grafana/provisioning/dashboards/: indexer_metrics.json  providers.yml
migrations/: 000001_init.sql
prometheus/: prometheus.yaml
src/: db.rs  entities.rs  main.rs  metrics.rs  rpc.rs
src/errors/: errors.rs  mod.rs
src/repository/: count.rs  mod.rs  save_block.rs  save_txs.rs
src/service/: fetch.rs  fetcher.rs  mod.rs  process.rs  processor.rs  subscribe.rs  subscriber.rs
