[package]
name = "ethereum-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = ["postgres"] }
clap = { version = "4.0.29", features = ["derive"] }
postgres = "0.19.4"
web3 = "0.17.0"
