[package]
name = "ethereum-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
clap = { version = "4.0.29", features = ["derive"] }
postgres = "0.19.4"
web3 = "0.17.0"
serde = "1.0.150"
serde_json = "1.0.89"
log = "0.4.17"
tokio = "1.23.0"
