[package]
name = "ethereum-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
clap = { version = "4.0.29", features = ["derive"] }
postgres = { version = "0.19.4", features = ["with-chrono-0_4"] }
web3 = "0.17.0"
serde = "1.0.150"
serde_json = "1.0.89"
log = "0.4.17"
tokio = "1.23.0"
thiserror = "1.0.37"
prometheus = "0.13.3"
axum = "0.6.1"
once_cell = "1.16.0"
lazy_static = "1.4.0"
chrono = "0.4.23"
